@@ -6,9 +6,9 @@
  * Date        : 2004-06-08
  * Description : Lossless JPEG files transformations.
  *
- * Copyright (C) 2004 by  Ralf Hoelzer <kde at ralfhoelzer.com>
- * Copyright (C) 2004-2009 by Marcel Wiesweg <marcel dot wiesweg at gmx dot de>
- * Copyright (C) 2006-2009 by Gilles Caulier <caulier dot gilles at gmail dot com>
+ * Copyright (C) 2004      by Ralf Hoelzer <kde at ralfhoelzer.com>
+ * Copyright (C) 2004-2010 by Marcel Wiesweg <marcel dot wiesweg at gmx dot de>
+ * Copyright (C) 2006-2010 by Gilles Caulier <caulier dot gilles at gmail dot com>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
